--- a/client/src/app/components/drugs/drugs-table/drugs-table.component.html
+++ b/client/src/app/components/drugs/drugs-table/drugs-table.component.html
@@ -1,4 +1,4 @@
-<!-- if cvcHeight not specified, render table with cvcAutoHeightCard directive -->
+<!-- if cvcHeight not specified, render table without card height container & viewport target -->
 <ng-container *ngIf="!cvcHeight; else setHeightCard">
   <!-- adjust nz-card's cvcAutoHeightCard to equalize padding around this table's container e.g. entity-home's nz-page-header components -->
   <nz-card [nzTitle]="titleTemplate"
